--- a/css/media.css
+++ b/css/media.css
@@ -438,6 +438,9 @@
       /* background-position: 100% 30%; */
       padding: 70px 0;
    }
+   .s4{
+      padding: 80px 50px;
+   }
    .s4__col-wrap{
       margin-top: 500px;
       background-image: none;
@@ -447,7 +450,7 @@
    }
    .s4__col{
       max-width: 470px;
-      padding: 0 40px;
+      padding: 0;
    }
    .s4__item-title,
    .s4__item-text {
@@ -1018,6 +1021,146 @@
       width: 80%;
    }
 }
+@media (max-width: 680px) {
+   .s4__title{
+      text-align: left;
+      margin-bottom: 430px;
+   }
+   .s4__phone {
+      top: 260px;
+      right: 45%;
+   }
+   .s4__phone::after,
+   .image__sell,
+   .image__sell>img {
+      display: none;
+   }
+   .s4__phone::before {
+      right: 45%;
+      top: -45px;      
+      transform: rotate(0deg);
+  }
+   .s7 {
+      background-size: 45%;
+  }
+}
+@media (max-width: 655px) {
+   .image__sell {
+      display: none;
+  }
+  .company__text{
+     font-size: 14px;
+     line-height: 26px;
+  }
+  .s8 {
+      padding: 50px 20px 100px 20px;
+   }
+  .s9__form {
+      padding: 40px 30px;
+      max-width: 350px;
+      min-width: 280px;
+   }
+   .s9__send-button {
+      min-width: 240px;
+  }
+}
+@media (max-width: 634px){
+   .s4{
+      padding: 65px 50px 15px 50px;
+   }
+   .form__title:after {
+      content: "Первый месяц - 50% скидка!";
+      position: absolute;
+      bottom: -20px;
+      right: 50%;
+      width: 100%;
+      font-family: MontR;
+      font-size: 14px;
+      line-height: 18px;
+      text-align: center;
+      text-transform: uppercase;
+      color: #950000;
+      transform: translateX(50%);
+   }
+
+   .s5__form {
+      border: 0px;
+      padding: 10px;
+   }
+
+   .form__content {
+      margin: auto;
+   }
+}
+@media (max-width: 560px) {
+   .main-title {
+      font-size: 26px;
+      line-height: 33px;
+   }
+   .s1__but {
+      top: 390px;
+   }
+   .s1__steps {
+      margin-top: 490px;
+  }
+   .special {
+      left: 30px;
+      bottom: 340px;
+      width: 25%;
+  }
+
+   /* по центру 4 текст  (где был тел)
+   отключить рамки формы
+   как мы работаем девушку по центру */
+
+   .s6__swiper-slide {
+      height: 380px;
+  }
+}
+
+@media (max-width: 510px) {
+   .s1__steps {
+      margin-top: 460px;
+   }
+   .s3__title {
+      font-size: 26px;
+      line-height: 33px;
+  }
+   .s6__title {
+      font-size: 26px;
+      line-height: 33px;
+  }
+   .company__name {
+      font-size: 32px;
+      line-height: 40px;
+   }
+   .author {
+      font-size: 18px;
+      line-height: 22px;
+   }
+   .company__text {
+      font-size: 12px;
+      line-height: 22px;
+   }
+
+}
+@media (max-width: 484px) {
+   .s1__subtitle {
+      top: 780px;
+      max-width: 100%;
+  }
+   .s3__wrap {
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+   }
+   .s3__item {
+      margin-bottom: 20px;
+   }
+   /* .s3__container {
+      padding: 60px 0;
+   } */
+}
 
 /* @media (max-width: 542px) {
    .form__content {
@@ -1271,8 +1414,8 @@
    }
 } */
 
-/* @media (max-width: 375px){
-   .header{
+@media (max-width: 375px){
+   /* .header{
       height: 78px;
    }
    .menu__burger {
@@ -1292,6 +1435,90 @@
    }
    .s1{
       background-image: url(../images/s1-bg-small!.jpg);
+   } */
+   .s4{
+      padding: 65px 50px;
+   }
+   .s4__phone {
+      top: 240px;
+      right: 40%;
+  }
+   .s4__title {
+      margin-bottom: 390px;
+   }
+   .s4__item-title {
+      font-size: 20px;
+      line-height: 23px; 
+   }
+   .s5__form{
+      padding: 1px;
+   }
+   .s10{
+      height: 350px;
+   }
+   .s10__content{
+      max-width: 100%;
+      position: relative;
+      left: 0;
+      min-height: 500px;
+      padding: 65px 22px;
+   }
+   .s10__title {
+      font-size: 26px;
+      line-height: 33px;
+   }
+   .s10__place {
+      font-size: 18px;
+      line-height: 20px;
+      text-transform: none;
+   }
+   .footer {
+      position: absolute;
+      bottom: -555px;
+  }
+}
+/* @media (max-width: 920px) {
+   .s1__title {
+      font-size: 30px;
+      line-height: 33px;
+   }
+   .s1__subtitle {
+      font-size: 18px;
+      line-height: 24px;
+   }
+   .s1__steps {
+      margin-top: 450px;
+   }
+   .special {
+      bottom: 400px;
+   }
+   .s1__subtitle {
+      max-width: 375px;
+   }
+   .s2__wrap {
+      flex-direction: column;
+      padding-top: 380px;
+   }
+
+   .s10 {
+      height: 337px;
+   }
+
+   .s10__title {
+      font-size: 26px;
+      line-height: 33px;
+   }
+   .s10__place {
+      font-size: 18px;
+      line-height: 20px;
+   }
+   .s10__phone {
+      font-size: 18px;
+      line-height: 23px;
+   }
+   .s10__gmail {
+      font-size: 18px;
+      line-height: 23px;
    }
 } */
 
