--- a/css/style.css
+++ b/css/style.css
@@ -213,26 +213,27 @@ body {
 
 .menu__open-phone1 {
    font-family: Roboto;
-   font-weight: 500;
+   font-weight: 700;
    font-size: 18px;
-   color: #59AE6B;
+   color: #0065B1;
    margin-top: 20px;
    margin-bottom: 10px;
 }
 
 .menu__open-phone2 {
    font-family: Roboto;
-   font-weight: 500;
+   font-weight: 700;
    font-size: 18px;
-   color: #59AE6B;
+   color: #0065B1;
 }
 
 .timetable {
    font-family: Roboto;
-   font-size: 14px;
+   font-size: 16px;
    line-height: 20px;
+   font-weight: 700;
    color: #A4A4A4;
-   margin-top: 4px;
+   margin-top: 15px;
 }
 
 .menu__open-links {
@@ -242,8 +243,8 @@ body {
    align-items: center;
    justify-content: space-between;
    position: absolute;
-   right: 75px;
-   top: 220px;
+   left: 220px;
+   top: 255px;
 }
 
 .menu__open-close {
@@ -484,7 +485,7 @@ body {
    padding: 25.5px 79px;
    font-family: Montserrat;
    font-weight: bold;
-   font-size: 18px;
+   font-size: 20px;
    line-height: 24px;
    color: #333333;
    margin-top: 127px;
