href desktop mobile

--- a/css/style.css
+++ b/css/style.css
@@ -772,6 +772,13 @@ body {
    right: 38px;
    z-index: -1;
 }
+/* .s5info{
+   padding: 20px 0;
+}
+.s5info__item-text{
+
+} */
+
 .s5{
    width: 100%;
    padding: 0 30px;
