--- a/css/media.css
+++ b/css/media.css
@@ -86,8 +86,8 @@
    .s4__phone {
       position: absolute;
       /* top: 230px; */
-      top: 35%;
-      right: 48.5%;
+      top: 38%;
+      right: 38.5%;
       transform: translate(50%, 0);
    }
 
@@ -273,7 +273,7 @@
    }
    .s4__phone{
       top: 37%;
-      right: 47.5%;
+      right: 36%;
    }
    .s4__col{
       max-width: 390px;
@@ -749,7 +749,7 @@
    }
    .s4__phone {
       top: 300px;
-      right: 25%;
+      right: 10%;
    }
    .s4__col-wrap {
       flex-direction: column;
@@ -995,7 +995,7 @@
    }
 
    .s4__phone {
-      right: 20%;
+      right: 0;
   }
    .s4__phone>img {
       width: 70%;
@@ -1028,7 +1028,7 @@
    }
    .s4__phone {
       top: 260px;
-      right: 45%;
+      right: 25%;
    }
    .s4__phone::after,
    .image__sell,
@@ -1133,6 +1133,12 @@
    .s1__steps {
       margin-top: 480px;
    }
+
+   .s1__but{
+      font-size: 18px;
+      padding: 26px 20px;   
+   }
+
    .s2{
       padding: 190px 0 65px 0;
    }
@@ -1154,6 +1160,7 @@
    }
    .s4__phone {
       top: 200px;
+      right: 18%;
   }
 
    .s6__title {
@@ -1164,8 +1171,11 @@
    .s6 {
       padding: 50px 20px;
    }
+   .s6__swiper-slide {
+      height: 350px;
+   }
    .swiper-pagination {
-      bottom: -35;
+      bottom: -30px;
    }
 
    .s7 {
@@ -1179,11 +1189,21 @@
    .s7__title-top {
       margin-bottom: 380px;
    }
+
    .s8{
       padding: 50px 20px;
    }
    .s8__slide {
       min-height: 0;
+   }
+   .s8__col1 {
+      display: none;
+   }
+   /* .s8__col1{
+      margin-right: 5px;
+   } */
+   .s8__slide{
+      padding: 30px;
    }
    .company__name {
       font-size: 26px;
@@ -1198,12 +1218,6 @@
    .company__text {
       font-size: 12px;
       line-height: 18px;
-   }
-   .s8__col1{
-      margin-right: 5px;
-   }
-   .s8__slide{
-      padding: 30px;
    }
 
    .s9__content {
@@ -1288,6 +1302,15 @@
    .s3__item {
       margin-bottom: 20px;
    }
+   .s6__swiper-slide {
+      height: 330px;
+   }
+}
+
+@media (max-width: 420px) {
+   .s4__phone {
+      right: 13%;
+  }
 }
 
 @media (max-width: 415px) {
@@ -1296,7 +1319,13 @@
    }
    .s3__title {
       margin-bottom: 35px;
-  }
+   }
+   .s4__phone {
+      right: 12%;
+   }
+   .s6__swiper-slide {
+      height: 280px;
+   } 
 }
 
 @media (max-width: 400px) {
@@ -1305,6 +1334,9 @@
    }
    .special {
       bottom: 410px;
+   }
+   .s4__phone {
+      right: 10%;
    }
 }
 
@@ -1564,6 +1596,9 @@
    .s2__button {
       font-size: 16px;
    }
+   .s4__phone {
+      right: 9%;
+   }
 }
 @media (max-width: 375px){
    .special {
@@ -1594,10 +1629,10 @@
    }
    .s4__phone {
       top: 240px;
-      right: 40%;
+      right: 7%;
   }
    .s4__title {
-      margin-bottom: 390px;
+      margin-bottom: 420px;
    }
    .s4__item-title {
       font-size: 20px;
@@ -1611,9 +1646,9 @@
    /* .swiper-pagination {
       bottom: auto;
    }  */
-   .swiper-pagination {
+   /* .swiper-pagination {
       bottom: -30px;
-   }
+   } */
    .s6__swiper-slide {
       height: 260px;
    }
@@ -1659,28 +1694,44 @@
    }
 }
 
+   /* meizu 16/9 */
+@media (max-width: 360px){
+   .s2__button {
+      font-size: 14px;
+   }
+   .s2__button {
+      padding: 26px 20px;
+   }
+}
+
 @media (max-width: 351px){
    .s1__subtitle {
       top: 790px;
    }
-   .s1__but{
+   /* .s1__but{
       font-size: 18px;   
-   }
-   .s2__button {
+   } */
+   /* .s2__button {
       font-size: 14px;
-   }
+   } */
    .s4__col {
       max-width: 280px;
    }
+   .s4__phone {
+      right: 1%;
+  }
 }
 @media (max-width: 320px){
    .s1__but{
       min-width: 280px;
       padding: 20px 40px;
    }
-   .s2__button {
+   /* .s2__button {
       padding: 26px 20px;
-   }
+   } */
+   .s4__phone {
+      right: 0;
+  }
 }
 
 /* @media (max-width: 920px) {
